--- a/views/index.html
+++ b/views/index.html
@@ -4,11 +4,17 @@
     <title>{{ title }}</title>
     <meta name="description"  content="{{ description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./dist/style.css">
   </head>
   <body>
     <h1>{{ title }}</h1>
     <p>{{ description }}</p>
     <div id="app">
+      <!-- 
+           utilization of view components is how I
+           decided to handle twig vs vue moustache
+           binding conflicts 
+      -->
       <board data="{{ data }}"></board>
     </div>
     <script src="/dist/script.js"></script>
