ironing out bugs

--- a/views/index.html
+++ b/views/index.html
@@ -10,12 +10,8 @@
     <h1>{{ title }}</h1>
     <p>{{ description }}</p>
     <div id="app">
-      <!-- 
-           utilization of view components is how I
-           decided to handle twig vs vue moustache
-           binding conflicts 
-      -->
-      <board data="{{ data }}"></board>
+      test
+      <board data="test"></board>
     </div>
     <script src="/dist/script.js"></script>
   </body>
