--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,7 @@
     <h1>{{ title }}</h1>
     <p>{{ description }}</p>
     <div id="app">
-      test
-      <board data="test"></board>
+      <board data="{{ data }}"></board>
     </div>
     <script src="/dist/script.js"></script>
   </body>
