clean up some styles

--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" type="text/css" href="./dist/style.css">
   </head>
   <body>
+    <style>
+    * {
+      box-sizing: border-box;
+      font-family: monospace;
+    }
+    </style>
     <h1>{{ title }}</h1>
     <p>{{ description }}</p>
     <div id="app">
