midway point for nav bar

--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
     for you and Twig can run unhindered.
     -->
     <div id="app">
-      <board :data="{{ data }}"></board>
+      <app :board="{{ data }}"></app>
     </div>
     <script src="/dist/script.js"></script>
   </body>
