--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,10 @@
       box-sizing: border-box;
       font-family: monospace;
     }
+    body > h1,
+    body > p {
+      text-align: center;
+    }
     </style>
     <h1>{{ title }}</h1>
     <p>{{ description }}</p>
